Ajeitando os ultimos bugs!

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </li>
             <li class="available-devices__list__item">
                 <img src="./dist/images/dispositivos/Rotten.png" alt="Rotten Tomatoes">
-                <h6 class="title--small">Rotten Tomatoes</h6>
+                <h6 class="title--small--critica">Rotten Tomatoes</h6>
                 <ul class="text">
                     <li>91%</li>
                 </ul>
